. convert the Selection's DOM offsets to Rendered offsets before using them   on the rendered string (#166241, #216092) . use slow font width algorithm when drawing selection for more accurate   placement (#213246)

BUG: 166241
BUG: 216092
BUG: 213246

svn path=/trunk/KDE/kdelibs/; revision=1056420